Fix some problems in question 1
Misread the question so some revisions are provided

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -17,16 +17,18 @@ myData <- read_csv("activity.zip")
 ## What is mean total number of steps taken per day?
 ```{r echo = TRUE, tidy = TRUE, message = FALSE}
 library(dplyr)
+
 ```
 
 **Summarising the mean and median by interval across the dataset.**
 ```{r raw-summary, echo = TRUE, tidy = TRUE}
-daily_steps <- myData %>% summarise(mean = mean(steps, na.rm = TRUE), median = median(steps, na.rm = TRUE))
-daily_steps
+total_steps <- myData %>% group_by(date) %>% summarise(sum_steps = sum(steps)) %>% ungroup()
+total_steps %>% summarise(mean = mean(sum_steps, na.rm = TRUE), median = median(sum_steps, na.rm = TRUE))
 ```
 
+**Create a histogram with raw data**
 ```{r raw-histogram, echo = TRUE, fig.align = "center"}
-hist(myData$steps, main = "Average daily steps", xlab = "Steps")
+hist(total_steps$sum_steps, main = "Average total steps", xlab = "Steps", breaks = 20)
 ```
 
 
@@ -58,17 +60,17 @@ filled_data <- myData
 for (i in interval_steps$interval) {
     filled_data[which(filled_data$interval == i & is.na(filled_data$steps)), "steps"] <- interval_steps[which(interval_steps$interval == i), "mean_steps"]
 }
-filled_interval_steps <- filled_data %>% summarise(mean_steps = mean(steps), median_steps = median(steps))
-filled_interval_steps
+filled_total_steps <- filled_data %>% group_by(date) %>% summarise(sum_steps = sum(steps)) %>% ungroup()
+filled_total_steps %>% summarise(mean_steps = mean(sum_steps), median_steps = median(sum_steps))
 ```
-After imputing missing values with the mean for each 5-minute interval, there is no change to either the mean or the median of the dataset.
+After imputing missing values with the mean for each 5-minute interval, there is no change to the mean and a slight (minor) change to the median of the dataset.
 
-
+**Create a histogram with imputed data**
 ```{r filled-histogram, echo = TRUE, fig.align = "center"}
-hist(filled_data$steps, main = "Average daily steps (missing values imputed)", xlab = "Steps")
+hist(filled_total_steps$sum_steps, main = "Average total steps (missing data imputed)", xlab = "Steps", breaks = 20)
 ```
 
-Comparing the two histograms, the general shapes of the two are same. The only difference is the frequency of 0 steps taken.
+Comparing the two histograms, the general shapes of the two are same. The only difference is the frequency of the *mean* value due to the method of imputation.
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
@@ -83,5 +85,5 @@ head(filled_data)
 library(ggplot2)
 filled_data %>% group_by(interval, category) %>% summarise(mean_steps = mean(steps)) %>% ggplot(aes(x = interval, y = mean_steps)) + geom_line() + facet_wrap(facets = vars(category), nrow = 2) + theme_light() + ylab("Average number of steps") + ggtitle("Average number of steps by weekdays/weekends", subtitle = "Missing data imputed") +  theme(plot.title = element_text(hjust = 0.5), plot.subtitle = element_text(hjust = 0.5))
 ```
-
+There's a general pattern that during weekdays, a lot of steps are taken between 8-10 AM whereas the steps are more evenly spread during the weekends.
 
